--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-mat-datepicker": "0.0.2",
     "bootstrap": "^5.1.3",
     "detect-passive-events": "^2.0.3",
     "jquery": "^3.6.0",
