--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.2",
     "detect-passive-events": "^2.0.3",
     "jquery": "^3.6.0",
+    "ng2-charts": "^3.0.1",
     "ng5-slider": "^1.2.6",
     "ngx-toastr": "^14.2.1",
     "popper.js": "^1.16.1",
