--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.2",
     "detect-passive-events": "^2.0.3",
     "jquery": "^3.6.0",
     "ng5-slider": "^1.2.6",
